fix white space error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,6 @@ nav{
 
 footer{
   background: #444343;
-  width: 100%;
   height: 100%;
   color: white;
   padding: 15px;
